# OTUS-rust-prof-2024-homeworks

./: README.md
hw10/src/: lib.rs  main.rs
hw11/smart_devices/: Cargo.toml
hw11/smart_devices/src/: device.rs
hw11/stp/src/: client.rs  error.rs
hw11/tcp_smart_devices/: Cargo.toml
hw11/tcp_smart_devices/examples/: async_client.rs
hw11/udp_smart_devices/src/: lib.rs
hw12/examples/: command.rs  visitor.rs
hw12/src/: command.rs  lib.rs  visitor.rs
hw13/: Cargo.toml
hw13/smart_devices/src/: lib.rs
hw13/stp/: Cargo.toml
hw13/stp/examples/: server.rs
hw13/tcp_smart_devices/examples/: async_server.rs  cli.rs
hw13/tcp_smart_devices/src/: main.rs
hw13/web/: Cargo.toml  client.sh
hw13/web/examples/: client_demo.rs
hw13/web/src/: dto.rs  main.rs
hw14/: Cargo.toml
hw14/gui/: Cargo.toml
hw14/gui/src/: main.rs
hw14/smart_devices/examples/: create_report.rs
hw14/smart_devices/src/: lib.rs
hw14/stp/src/: asnc.rs  lib.rs
hw14/tcp_smart_devices/src/: lib.rs
hw14/udp_smart_devices/examples/: async_client.rs
hw14/web/: Cargo.toml  client.sh
hw14/web/src/: main.rs
hw2/src/: lib.rs
hw3/src/: main.rs
hw4/examples/: create_report.rs
hw4/src/: device.rs  info.rs  lib.rs  main.rs
hw5/: Cargo.toml
hw5/examples/: create_report.rs
hw5/src/: device.rs  lib.rs
hw6/: Cargo.toml
hw6/examples/: create_report.rs
hw6/src/: lib.rs
hw7/: Cargo.toml
hw7/tcp_smart_devices/: Cargo.toml
hw8/: Cargo.toml
hw9/net_smart_devices/: Cargo.toml
hw9/stp/: Cargo.toml
hw9/tcp_smart_devices/: Cargo.toml
hw9/udp_smart_devices/: Cargo.toml
(+21 files in other folders)
